<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="?attr/headBackground"
        android:textColor="?attr/textColor_light"
        android:text="@string/font_size_sample_indicator"
        android:textSize="@dimen/font_size_sample_indicator"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size_sample_12"
        android:textSize="@dimen/font_size_sample_12"
        android:textColor="?attr/textColor_dark"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size_sample_14"
        android:textSize="@dimen/font_size_sample_14"
        android:textColor="?attr/textColor_dark"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size_sample_16"
        android:textSize="@dimen/font_size_sample_16"
        android:textColor="?attr/textColor_dark"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size_sample_18"
        android:textSize="@dimen/font_size_sample_18"
        android:textColor="?attr/textColor_dark"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size_sample_20"
        android:textSize="@dimen/font_size_sample_20"
        android:textColor="?attr/textColor_dark"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size_sample_22"
        android:textSize="@dimen/font_size_sample_22"
        android:textColor="?attr/textColor_dark"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size_sample_24"
        android:textSize="@dimen/font_size_sample_24"
        android:textColor="?attr/textColor_dark"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size_sample_26"
        android:textSize="@dimen/font_size_sample_26"
        android:textColor="?attr/textColor_dark"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size_sample_28"
        android:textSize="@dimen/font_size_sample_28"
        android:textColor="?attr/textColor_dark"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size_sample_30"
        android:textSize="@dimen/font_size_sample_30"
        android:textColor="?attr/textColor_dark"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp" />

</LinearLayout>