<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score_title"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="?attr/textColor_dark"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:minHeight="80dp"
        android:gravity="center_vertical" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.80"
        android:background="?android:windowBackground">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:id="@+id/score_list"
            android:smoothScrollbar="true"
            android:divider="?android:divider"
            android:dividerHeight="1dp"
            android:paddingLeft="8dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.79"
        android:background="?android:windowBackground"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_reset"
            android:id="@+id/SL_btn_R"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/mybutton"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="5dp"
            android:textColor="?attr/textColor_light"
            android:textSize="20sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_share"
            android:id="@+id/SL_btn_M"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/mybutton"
            android:layout_marginRight="2.5dp"
            android:layout_marginLeft="5dp"
            android:textColor="?attr/textColor_light"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_return"
            android:id="@+id/SL_btn_L"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/mybutton"
            android:layout_marginRight="2.5dp"
            android:layout_marginLeft="5dp"
            android:textColor="?attr/textColor_light"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>