<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/wuziqi_panel_buttons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <Button
            android:id="@+id/wuziqi_panelmulti_buttons_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wq_btn_return"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/mybutton"
            android:textColor="?attr/textColor_light"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:paddingBottom="3dp" />
        <Button
            android:id="@+id/wuziqi_panelmulti_buttons_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wq_btn_replay"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/mybutton"
            android:textColor="?attr/textColor_light"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:paddingBottom="3dp" />
    </LinearLayout>
    <TextView
        android:text="@string/firsthand_indicator"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:textSize="24sp"
        android:id="@+id/textView"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:textSize="22sp"
                android:text="@string/multi_winTimes"
                android:textColor="@color/text_color"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/multi_win_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:textSize="22sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:textSize="22sp"
                android:text="@string/multi_failTimes"
                android:textColor="@color/text_color"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/multi_fail_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:textSize="22sp"/>
        </LinearLayout>
    </LinearLayout>

    <com.example.Wuziqi.WuziqiPanel_Multi
        android:id="@+id/panel_multi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>