<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="10dp">
        <ImageView
            android:id="@+id/wel_logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:scaleType="centerInside"
            android:contentDescription="" />
        <!--<ImageView
            android:id="@+id/level_indicator"
            android:layout_width="60dp"
            android:elevation="1dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right" />-->
        <TextView
            android:id="@+id/level_indicator"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/badge_bg"
            android:fontFamily="monospace"
            android:gravity="top|center_horizontal"
            android:paddingTop="7dp"
            android:text="1"
            android:textColor="#9F1C00"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        android:paddingBottom="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wel_btn_play"
            android:id="@+id/btn_play"
            android:layout_gravity="center_horizontal"
            android:minWidth="250dp"
            android:minHeight="60dp"
            android:textSize="35sp"
            android:textAllCaps="false"
            android:background="@drawable/mybutton"
            android:textColor="?attr/textColor_light"
            android:layout_marginBottom="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wel_btn_play_2"
            android:id="@+id/btn_play_2"
            android:layout_gravity="center_horizontal"
            android:minWidth="250dp"
            android:minHeight="60dp"
            android:textSize="35sp"
            android:textAllCaps="false"
            android:background="@drawable/mybutton"
            android:textColor="?attr/textColor_light"
            android:layout_marginBottom="8dp"
            />

        <!--<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wel_btn_score"
            android:id="@+id/btn_scores"
            android:layout_gravity="center_horizontal"
            android:minWidth="250dp"
            android:minHeight="60dp"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/mybutton"
            android:textColor="?attr/textColor_light"
            android:layout_marginBottom="8dp"
            />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wel_btn_history"
            android:id="@+id/btn_history"
            android:layout_gravity="center_horizontal"
            android:minWidth="250dp"
            android:minHeight="60dp"
            android:textSize="35sp"
            android:textAllCaps="false"
            android:background="@drawable/mybutton"
            android:textColor="?attr/textColor_light"
            android:layout_marginBottom="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wel_btn_setting"
            android:id="@+id/btn_settings"
            android:layout_gravity="center_horizontal"
            android:minWidth="250dp"
            android:minHeight="60dp"
            android:textSize="35sp"
            android:textAllCaps="false"
            android:background="@drawable/mybutton"
            android:textColor="?attr/textColor_light"
            android:layout_marginBottom="8dp" />
    </LinearLayout>
</LinearLayout>
